--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <div class="choices">
         <div class="choice" id="R">
-            <img src="/img/rock.png">
+            <img src="img/rock.png">
         </div>
         <div class="choice" id="P">
-            <img src="/img/paper.png">
+            <img src="img/paper.png">
         </div>
         <div class="choice" id="S">
-            <img src="/img/scissors.png">
+            <img src="img/scissors.png">
         </div>
     </div>
     <p id="action-message">Show Your Move!</p>
